--- a/src/index.html
+++ b/src/index.html
@@ -3,9 +3,10 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
-    <title>Causa Conf - Nov 2019</title>
+    <title>Causa Conf - Lima, Perú Jun 2020</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Major+Mono+Display|Source+Code+Pro&display=swap">
     <link rel="stylesheet" href="/style.css">
+    <link rel="shortcut icon" href="favicon.ico">
   </head>
   <body>
     <div id="root"></div>
