Changes viewport meta for better a11y

--- a/src/index.html
+++ b/src/index.html
@@ -2,11 +2,14 @@
 <html lang="es" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
-    <title>Causa Conf - Lima, Perú Jun 2020</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <title>Causa Conf - Lima, Perú - Jun 2020</title>
+    <meta name="description" content="CausaConf es una conferencia en Lima, Perú, sobre JavaScript, Node.js, CSS, HTML, Open Web, Open Source, Open Hardware, IoT, Arduino, Cloud, Python, Data Science, Rust, UX, DevOps, Arte digital">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Major+Mono+Display|Source+Code+Pro&display=swap">
     <link rel="stylesheet" href="/style.css">
-    <link rel="shortcut icon" href="favicon.ico">
+    <link rel="manifest" href="/manifest.webmanifest">
+    <link rel="shortcut icon" href="/img/favicon.ico">
+    <link rel="apple-touch-icon" href="/img/apple-touch-icon.png">
   </head>
   <body>
     <div id="root"></div>
