Adds theme color and noscript tags to html

--- a/src/index.html
+++ b/src/index.html
@@ -10,8 +10,12 @@
     <link rel="manifest" href="/manifest.webmanifest">
     <link rel="shortcut icon" href="/img/favicon.ico">
     <link rel="apple-touch-icon" href="/img/apple-touch-icon.png">
+    <meta name="theme-color" content="#000000"/>
   </head>
   <body>
+    <noscript>
+      Necesitas habilitar JavaScript para ver esta app.
+    </noscript>
     <div id="root"></div>
     <script src="/main.js"></script>
   </body>
