Adds meta data for social network previews

--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Causa Conf - Lima, Perú - Jun 2020</title>
+    <title>Causa Conf - Lima, Perú - 13 Jun 2020</title>
     <meta name="description" content="CausaConf es una conferencia en Lima, Perú, sobre JavaScript, Node.js, CSS, HTML, Open Web, Open Source, Open Hardware, IoT, Arduino, Cloud, Python, Data Science, Rust, UX, DevOps, Arte digital">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Major+Mono+Display|Source+Code+Pro&display=swap">
     <link rel="stylesheet" href="/style.css">
@@ -11,6 +11,14 @@
     <link rel="shortcut icon" href="/img/favicon.ico">
     <link rel="apple-touch-icon" href="/img/apple-touch-icon.png">
     <meta name="theme-color" content="#000000"/>
+    <meta property="og:title" content="Causa Conf - Lima, Perú - 13 Jun 2020">
+    <meta property="og:description" content="CausaConf es una conferencia en Lima, Perú, sobre JavaScript, Node.js, CSS, HTML, Open Web, Open Source, Open Hardware, IoT, Arduino, Cloud, Python, Data Science, Rust, UX, DevOps, Arte digital">
+    <meta property="og:image" content="https://causaconf.pe/img/og-image.png">
+    <meta property="og:url" content="https://causaconf.pe/">
+    <meta name="twitter:card" content="summary_large_image">
+    <meta property="og:site_name" content="CausaConf">
+    <meta name="twitter:image:alt" content="CausaConf 2020">
+    <meta name="twitter:site" content="@causaconf">
   </head>
   <body>
     <noscript>
