--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
     <meta name="theme-color" content="#000000"/>
     <meta property="og:title" content="Causa Conf - Lima, Perú - 13 Jun 2020">
     <meta property="og:description" content="CausaConf es una conferencia en Lima, Perú, sobre JavaScript, Node.js, CSS, HTML, Open Web, Open Source, Open Hardware, IoT, Arduino, Cloud, Python, Data Science, Rust, UX, DevOps, Arte digital">
-    <meta property="og:image" content="https://causaconf.pe/img/og-image.png">
+    <meta property="og:image" content="https://user-images.githubusercontent.com/110297/70770275-b7f7cb00-1d3a-11ea-8d55-14b413994601.png">
     <meta property="og:url" content="https://causaconf.pe/">
     <meta name="twitter:card" content="summary_large_image">
     <meta property="og:site_name" content="CausaConf">
