--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>CausaConf - Lima, Perú - 13 Jun 2020</title>
-    <meta name="description" content="CausaConf es una conferencia en Lima, Perú, sobre JavaScript, Node.js, CSS, HTML, Open Web, Open Source, Open Hardware, IoT, Arduino, Cloud, Python, Data Science, Rust, UX, DevOps, Arte digital">
+    <meta name="description" content="CausaConf es una conferencia sobre desarrollo web, JavaScript, Node.js, CSS, HTML, Open Web, Open Source, Open Hardware, IoT, Arduino, Cloud, Python, Data Science, Rust, UX, DevOps, Arte digital">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Major+Mono+Display|Source+Code+Pro&display=swap">
     <link rel="stylesheet" href="/style.css">
     <link rel="manifest" href="/manifest.webmanifest">
@@ -12,7 +12,7 @@
     <link rel="apple-touch-icon" href="/img/apple-touch-icon.png">
     <meta name="theme-color" content="#000000"/>
     <meta property="og:title" content="CausaConf - Lima, Perú - 13 Jun 2020">
-    <meta property="og:description" content="CausaConf es una conferencia en Lima, Perú, sobre JavaScript, Node.js, CSS, HTML, Open Web, Open Source, Open Hardware, IoT, Arduino, Cloud, Python, Data Science, Rust, UX, DevOps, Arte digital">
+    <meta property="og:description" content="CausaConf es una conferencia sobre desarrollo web, JavaScript, Node.js, CSS, HTML, Open Web, Open Source, Open Hardware, IoT, Arduino, Cloud, Python, Data Science, Rust, UX, DevOps, Arte digital">
     <meta property="og:image" content="https://user-images.githubusercontent.com/110297/70770275-b7f7cb00-1d3a-11ea-8d55-14b413994601.png">
     <meta property="og:url" content="https://causaconf.pe/">
     <meta name="twitter:card" content="summary_large_image">
