Agrega Google Analytics

--- a/src/index.html
+++ b/src/index.html
@@ -26,5 +26,13 @@
     </noscript>
     <div id="root"></div>
     <script src="/main.js"></script>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-155981951-1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'UA-155981951-1');
+    </script>
   </body>
 </html>
